--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-FROM_EMAIL=dagomez87@ucatolica.edu.co
+FROM_EMAIL=diegoarmandogomezlara@gmail.com
+TO_EMAIL=dagomez87@ucatolica.edu.co
 FROM_NAME=Correos de Notificación
-SMTP_HOST=mail.ejemplo.com
+SMTP_HOST= smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=diegoarmandogomezlara@gmail.com
